# old-faithful-client

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
protos/: old-faithful.proto
src/: config.rs
src/grpc/: client.rs
