[package]
name = "yellowstone-faithful-client"
version = "0.1.0"
authors = ["Old Faithful Contributors"]
edition = "2021"
rust-version = "1.75.0"
description = "Rust SDK for interacting with Old Faithful gRPC services, providing access to Solana historical data"
license = "MIT"
homepage = "https://www.tokamai.com"
repository = "https://github.com/tokamai/tokamai-old-faithful-client"
keywords = ["solana", "blockchain", "grpc", "client", "old-faithful"]
categories = ["api-bindings", "asynchronous"]
readme = "README.md"
exclude = ["examples/*"]

[dependencies]
# Core async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
bytes = "1"

# gRPC dependencies (required)
tonic = { version = "0.12", default-features = false, features = [
    "transport",
    "codegen",
    "prost",
    "tls",
    "tls-roots",
] }
prost = "0.13.5"
prost-types = "0.13.5"

# Serialization (used for models)
serde = { version = "1.0", features = ["derive"] }

# Encoding and utilities
base64 = "0.22.1"
bs58 = "0.5"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1.41"

# Async utilities
async-stream = "0.3"

# Solana types
solana-sdk = "~2.2.1"
solana-transaction-status = "~2.2.1"

[build-dependencies]
tonic-build = "0.12"
protobuf-src = "1.1.0"

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
wiremock = "0.6"
clap = { version = "4.5.40", features = ["derive"] }
chrono = "0.4"
